# nouslatam_TT_backend

./: .dockerignore  .env.exemple  .gitignore  Dockerfile  README.md  docker-compose.yml  entrypoint.sh  hello.py  pyproject.toml  requirements.txt  wait_for_db.py
core/: settings.py  urls.py
quotes/: urls.py  views.py
tasks/: models.py  serializers.py  tests.py  urls.py  views.py
tasks/migrations/: 0001_initial.py
users/: backends.py  serializers.py  urls.py  views.py
